--- a/app/src/main/res/layout/layout_toolbar_screens.xml
+++ b/app/src/main/res/layout/layout_toolbar_screens.xml
@@ -22,7 +22,7 @@
             android:layout_marginRight="16dp"
             android:layout_weight="1"
             android:gravity="center|right"
-            android:textColor="@color/white"
+            android:textColor="@color/black"
             android:textSize="16dp"
             android:textStyle="bold"
             tools:text="عنوان صفحه" />
@@ -31,7 +31,7 @@
             android:id="@+id/card_view_back_toolbar_screens"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:cardBackgroundColor="#80FFFFFF"
+            app:cardBackgroundColor="@color/purple_200"
             app:cardCornerRadius="10dp"
             app:cardElevation="0dp"
             app:contentPadding="6dp">
