--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,7 +4,7 @@
     <color name="purple_500">#405aa5</color>
     <color name="purple_700">#405aa5</color>
     <color name="alert_color">#CD5E5C</color>
-    <color name="status_bar_color">#B3000000</color>
+    <color name="status_bar_color">#ffffffff</color>
     <color name="color_btn_admob">#F6A640</color>
     <color name="color_ad_indicator_admob">#C8C8C8</color>
     <color name="teal_200">#FF03DAC5</color>
@@ -16,7 +16,7 @@
     <color name="color_background_fragments">#E4E4E4</color>
     <color name="color_background_preview_item">#f1f1f1</color>
     <color name="color_gallery_category_item">#AAAAAA</color>
-    <color name="color_background_action_bar">@color/purple_500</color>
+    <color name="color_background_action_bar">@color/status_bar_color</color>
     <color name="color_background_preview_menu">#ffffff</color>
     <color name="color_action_bar_preview_menu">#F1F1F1</color>
     <color name="color_download_button">#405aa5</color>
