--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,6 +11,8 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="color_border_edittext">#8C8C8C</color>
+    <color name="color_hint_edittext">#8C8C8C</color>
     <color name="color_menu_download">#E7EBFF</color>
     <color name="color_background_gallery_item">#FFFFFF</color>
     <color name="color_background_fragments">#E4E4E4</color>
