[FIX] ui and something

--- a/app/src/main/res/layout/fragment_details.xml
+++ b/app/src/main/res/layout/fragment_details.xml
@@ -780,7 +780,6 @@
         android:id="@+id/layout_loading"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="#fff"
         android:gravity="center"
         android:orientation="vertical"
         android:visibility="visible"
@@ -802,7 +801,7 @@
             android:layout_height="wrap_content"
             android:layout_above="@id/button_retry"
             android:layout_centerHorizontal="true"
-            android:text="Check Internet Connection ..."
+            android:text="@string/string_error_loading_results"
             android:visibility="gone"
             tools:visibility="visible" />
 
@@ -812,7 +811,7 @@
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
             android:layout_marginTop="4dp"
-            android:text="Retry"
+            android:text="@string/string_retry_find_results"
             android:visibility="gone"
             tools:visibility="visible" />
 
