--- a/app/src/main/res/drawable/ic_search.xml
+++ b/app/src/main/res/drawable/ic_search.xml
@@ -1,4 +1,4 @@
 <vector android:height="24dp" android:viewportHeight="32"
     android:viewportWidth="32" android:width="24dp" xmlns:android="http://schemas.android.com/apk/res/android">
-    <path android:fillColor="#ffffff" android:pathData="M29.71,28.29l-6.5,-6.5 -0.07,0a12,12 0,1 0,-1.39 1.39s0,0.05 0,0.07l6.5,6.5a1,1 0,0 0,1.42 0A1,1 0,0 0,29.71 28.29ZM14,24A10,10 0,1 1,24 14,10 10,0 0,1 14,24Z"/>
+    <path android:fillColor="@color/color_search_icon" android:pathData="M29.71,28.29l-6.5,-6.5 -0.07,0a12,12 0,1 0,-1.39 1.39s0,0.05 0,0.07l6.5,6.5a1,1 0,0 0,1.42 0A1,1 0,0 0,29.71 28.29ZM14,24A10,10 0,1 1,24 14,10 10,0 0,1 14,24Z"/>
 </vector>
