--- a/app/src/main/res/layout/fragment_gallery.xml
+++ b/app/src/main/res/layout/fragment_gallery.xml
@@ -14,6 +14,8 @@
         android:layout_height="?actionBarSize"
         android:background="@color/color_background_gallery_item"
         android:gravity="center"
+        android:visibility="gone"
+        tools:visibility="visible"
         android:orientation="horizontal"
         android:paddingLeft="16dp"
         android:paddingRight="16dp">
@@ -73,6 +75,8 @@
         android:layout_height="wrap_content"
         android:background="@color/color_background_gallery_item"
         android:gravity="center"
+        android:visibility="gone"
+        tools:visibility="visible"
         android:orientation="horizontal">
 
         <androidx.recyclerview.widget.RecyclerView
