--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/color_background_gallery_item"
+    android:background="@color/color_background_fragments"
     android:orientation="vertical">
 
     <RelativeLayout
@@ -17,7 +17,8 @@
             android:background="@color/color_background_gallery_item"
             android:gravity="center"
             android:orientation="horizontal"
-            android:paddingLeft="16dp">
+            android:paddingLeft="16dp"
+            android:paddingRight="10dp">
 
             <com.google.android.material.card.MaterialCardView
                 android:id="@+id/card_view_back_toolbar_search"
@@ -35,77 +36,65 @@
 
             </com.google.android.material.card.MaterialCardView>
 
-            <com.google.android.material.card.MaterialCardView
+            <androidx.appcompat.widget.LinearLayoutCompat
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
+                android:layout_height="45dp"
                 android:layout_marginStart="10dp"
-                android:layout_marginEnd="10dp"
+                android:layout_marginEnd="5dp"
                 android:layout_weight="1"
+                android:background="@drawable/shape_edittext"
                 android:gravity="center"
                 android:orientation="horizontal"
-                app:cardBackgroundColor="@color/color_background_gallery_item"
-                app:cardCornerRadius="15dp"
-                app:cardElevation="0dp"
-                app:strokeColor="@color/color_border_edittext"
-                app:strokeWidth="1dp">
+                android:paddingLeft="7dp"
+                android:paddingRight="7dp">
 
-                <androidx.appcompat.widget.LinearLayoutCompat
-                    android:layout_width="match_parent"
+                <androidx.appcompat.widget.AppCompatImageView
+                    android:id="@+id/img_clean"
+                    android:layout_width="26dp"
+                    android:layout_height="26dp"
+                    android:layout_marginEnd="4dp"
+                    android:padding="4dp"
+                    android:src="@drawable/ic_close"
+                    android:visibility="invisible"
+                    tools:visibility="visible" />
+
+                <androidx.appcompat.widget.AppCompatAutoCompleteTextView
+                    android:id="@+id/edt_search"
+                    android:layout_width="0dp"
                     android:layout_height="45dp"
-                    android:layout_alignParentBottom="true"
-                    android:gravity="center"
-                    android:orientation="horizontal"
-                    android:paddingLeft="7dp"
-                    android:paddingRight="7dp">
+                    android:layout_weight="1"
+                    android:background="@android:color/transparent"
+                    android:ellipsize="end"
+                    android:hint="@string/string_hint_edittext_search"
+                    android:imeOptions="actionSearch"
+                    android:inputType="text"
+                    android:maxLines="1"
+                    android:paddingRight="10dp"
+                    android:textColor="@color/black"
+                    android:textColorHint="@color/color_hint_edittext"
+                    android:textDirection="anyRtl"
+                    android:textSize="14dp" />
 
-                    <androidx.appcompat.widget.AppCompatImageView
-                        android:id="@+id/img_clean"
-                        android:layout_width="26dp"
-                        android:layout_height="26dp"
-                        android:layout_marginEnd="4dp"
-                        android:padding="4dp"
-                        android:src="@drawable/ic_close"
-                        android:visibility="invisible"
-                        tools:visibility="visible" />
+            </androidx.appcompat.widget.LinearLayoutCompat>
 
-                    <androidx.appcompat.widget.AppCompatAutoCompleteTextView
-                        android:id="@+id/edt_search"
-                        android:layout_width="0dp"
-                        android:layout_height="45dp"
-                        android:layout_weight="1"
-                        android:background="@android:color/transparent"
-                        android:ellipsize="end"
-                        android:hint="@string/string_hint_edittext_search"
-                        android:imeOptions="actionSearch"
-                        android:inputType="text"
-                        android:maxLines="1"
-                        android:paddingRight="10dp"
-                        android:textColor="@color/black"
-                        android:textColorHint="@color/color_hint_edittext"
-                        android:textDirection="anyRtl"
-                        android:textSize="14dp" />
+            <com.google.android.material.card.MaterialCardView
+                android:id="@+id/card_view_search"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                app:cardBackgroundColor="@color/color_background_edittext"
+                app:cardCornerRadius="10dp"
+                app:cardElevation="0dp"
+                app:contentPadding="6dp">
 
-                    <com.google.android.material.card.MaterialCardView
-                        android:id="@+id/card_view_search"
-                        android:layout_width="35dp"
-                        android:layout_height="35dp"
-                        app:cardBackgroundColor="@color/color_background_fragments"
-                        app:cardCornerRadius="10dp"
-                        app:cardElevation="0dp"
-                        app:contentPadding="6dp">
-
-                        <ImageView
-                            android:id="@+id/image_view_search"
-                            android:layout_width="20dp"
-                            android:layout_height="20dp"
-                            android:layout_gravity="center"
-                            android:src="@drawable/ic_search" />
-
-                    </com.google.android.material.card.MaterialCardView>
-
-                </androidx.appcompat.widget.LinearLayoutCompat>
+                <ImageView
+                    android:id="@+id/image_view_search"
+                    android:layout_width="20dp"
+                    android:layout_height="20dp"
+                    android:layout_gravity="center"
+                    android:src="@drawable/ic_search" />
 
             </com.google.android.material.card.MaterialCardView>
+
 
         </androidx.appcompat.widget.LinearLayoutCompat>
 
@@ -115,34 +104,36 @@
         android:id="@+id/layout_previous_search_list"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
+        android:background="@color/color_background_gallery_item"
         android:gravity="center"
+        android:orientation="vertical"
+        android:paddingTop="10dp"
+        android:paddingBottom="10dp"
         android:visibility="gone"
-        tools:visibility="visible"
-        android:orientation="vertical">
+        tools:visibility="visible">
 
         <androidx.appcompat.widget.LinearLayoutCompat
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:gravity="center"
-            android:paddingLeft="16dp"
             android:layout_marginBottom="10dp"
-            android:paddingRight="16dp"
-            android:orientation="horizontal">
+            android:gravity="center"
+            android:orientation="horizontal"
+            android:paddingLeft="16dp"
+            android:paddingRight="7dp">
 
             <TextView
                 android:id="@+id/text_view_clear_previous"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="حذف همه"
-                android:textStyle="bold"
-                android:textSize="14dp" />
+                android:textSize="14dp"
+                android:textStyle="bold" />
 
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:drawableRight="@drawable/ic_cloud_download"
-                android:drawablePadding="10dp"
+                android:drawableRight="@drawable/ic_history"
+                android:drawablePadding="4dp"
                 android:gravity="center|right"
                 android:text="جستجو های قبلی"
                 android:textColor="@color/black"
@@ -155,14 +146,14 @@
             android:id="@+id/rec_previous_search"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:paddingRight="10dp"
-            android:paddingLeft="10dp"
             android:clipToPadding="false"
             android:orientation="horizontal"
-            tools:layoutManager="androidx.recyclerview.widget.StaggeredGridLayoutManager"
-            tools:spanCount="2"
+            android:paddingLeft="10dp"
+            android:paddingRight="10dp"
             tools:itemCount="15"
-            tools:listitem="@layout/item_previous_search"/>
+            tools:layoutManager="androidx.recyclerview.widget.StaggeredGridLayoutManager"
+            tools:listitem="@layout/item_previous_search"
+            tools:spanCount="2" />
 
     </androidx.appcompat.widget.LinearLayoutCompat>
 
@@ -175,6 +166,7 @@
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
+            <!--            //layout_suggestion_list//-->
             <androidx.appcompat.widget.LinearLayoutCompat
                 android:id="@+id/layout_suggestion_list"
                 android:layout_width="match_parent"
@@ -186,7 +178,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="10dp"
                     android:layout_marginRight="10dp"
-                    android:layout_marginBottom="5dp"
+                    android:layout_marginBottom="10dp"
                     android:gravity="center|right"
                     android:text="پیشنهاد شده برای شما"
                     android:textColor="@color/black"
@@ -212,15 +204,17 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:clipToPadding="false"
-                    android:orientation="horizontal"
+                    android:orientation="vertical"
                     android:paddingLeft="7dp"
                     app:layoutManager="androidx.recyclerview.widget.StaggeredGridLayoutManager"
-                    app:spanCount="1"
+                    app:spanCount="4"
                     tools:itemCount="10"
-                    tools:listitem="@layout/item_unsplash_photo" />
+                    tools:listitem="@layout/item_suggest_photo" />
 
             </androidx.appcompat.widget.LinearLayoutCompat>
 
+
+            <!--            //layout_search_list//-->
             <androidx.appcompat.widget.LinearLayoutCompat
                 android:id="@+id/layout_search_list"
                 android:layout_width="match_parent"
