--- a/app/src/main/res/layout/item_suggest_photo.xml
+++ b/app/src/main/res/layout/item_suggest_photo.xml
@@ -7,7 +7,6 @@
     android:layout_height="wrap_content"
     android:layout_marginEnd="7dp"
     android:layout_marginBottom="7dp"
-    android:layout_marginTop="7dp"
     app:cardBackgroundColor="@color/color_background_gallery_item"
     app:cardCornerRadius="15dp"
     app:cardElevation="04dp">
@@ -45,8 +44,7 @@
                 android:layout_width="30dp"
                 android:layout_height="30dp"
                 app:cardCornerRadius="25dp"
-                app:cardElevation="0dp"
-                tools:background="#80FFFFFF">
+                app:cardElevation="0dp">
 
                 <ImageView
                     android:id="@+id/image_view_profile"
