--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -11,9 +11,11 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FFFFFF</color>
     <color name="white">#FFFFFF</color>
-    <color name="color_border_edittext">#ffffff</color>
+    <color name="color_background_edittext">#0D1C27</color>
     <color name="color_hint_edittext">#ffffff</color>
+    <color name="color_search_icon">#ffffff</color>
     <color name="color_menu_download">#E7EBFF</color>
+    <color name="color_background_item_previous">#0D1C27</color>
     <color name="color_background_gallery_item">#1a2a37</color>
     <color name="color_gallery_category_item">#1c2a35</color>
     <color name="color_background_preview_item">#1a2a37</color>
