--- a/app/src/main/res/layout/fragment_splash.xml
+++ b/app/src/main/res/layout/fragment_splash.xml
@@ -7,6 +7,7 @@
     tools:context=".ui.splash.SplashFragment">
 
     <androidx.appcompat.widget.AppCompatImageView
+        android:id="@+id/img_splash"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:scaleType="centerCrop"
