--- a/app/src/main/res/drawable/shape_btn_cancel.xml
+++ b/app/src/main/res/drawable/shape_btn_cancel.xml
@@ -3,7 +3,7 @@
     android:shape="rectangle">
 
     <solid
-        android:color="@android:color/darker_gray"/>
+        android:color="@color/color_background_item_previous"/>
     <corners
         android:radius="15dp"/>
 
