--- a/app/src/main/res/layout/layout_dialog_permissiont_info.xml
+++ b/app/src/main/res/layout/layout_dialog_permissiont_info.xml
@@ -7,7 +7,7 @@
     android:layout_height="wrap_content"
     android:layout_margin="15dp"
     android:orientation="vertical"
-    app:cardBackgroundColor="#FFFFFF"
+    app:cardBackgroundColor="@color/color_background_gallery_item"
     app:cardCornerRadius="10dp"
     app:cardElevation="0dp">
 
@@ -57,7 +57,7 @@
                 android:layout_marginEnd="10dp"
                 android:background="@drawable/shape_btn_cancel"
                 android:text="@string/string_btn_cancel"
-                android:textColor="@color/white"
+                android:textColor="@color/black"
                 android:textSize="14sp" />
 
             <androidx.appcompat.widget.AppCompatButton
