--- a/app/src/main/res/layout/layout_dialog_permissiont_info.xml
+++ b/app/src/main/res/layout/layout_dialog_permissiont_info.xml
@@ -54,21 +54,25 @@
                 android:id="@+id/btn_cancel"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginVertical="4dp"
                 android:layout_marginEnd="10dp"
                 android:background="@drawable/shape_btn_cancel"
                 android:text="@string/string_btn_cancel"
                 android:textColor="@color/black"
-                android:textSize="14sp" />
+                android:textSize="14sp"
+                app:elevation="0dp" />
 
             <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/btn_setting"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:layout_marginVertical="4dp"
                 android:layout_weight="1"
                 android:background="@drawable/shape_btn_success"
                 android:text="@string/string_btn_setting"
                 android:textColor="@color/white"
-                android:textSize="14sp" />
+                android:textSize="14sp"
+                app:elevation="0dp" />
 
         </androidx.appcompat.widget.LinearLayoutCompat>
 
