[FIX] translate topic titles . fix something about tapsell add some file kotlin

--- a/app/src/main/res/layout/fragment_gallery.xml
+++ b/app/src/main/res/layout/fragment_gallery.xml
@@ -85,6 +85,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:clipToPadding="false"
+            android:layoutDirection="rtl"
             android:orientation="horizontal"
             android:paddingLeft="4dp"
             android:paddingRight="4dp"
