--- a/app/src/main/res/layout/fragment_my_download.xml
+++ b/app/src/main/res/layout/fragment_my_download.xml
@@ -16,6 +16,7 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
+        android:clipToPadding="false"
         android:orientation="vertical"
         android:paddingEnd="7dp"
         app:layoutManager="androidx.recyclerview.widget.StaggeredGridLayoutManager"
