--- a/app/src/main/res/layout/layout_bottom_sheet_photo.xml
+++ b/app/src/main/res/layout/layout_bottom_sheet_photo.xml
@@ -23,25 +23,6 @@
             android:paddingLeft="16dp"
             android:paddingRight="16dp">
 
-            <com.google.android.material.card.MaterialCardView
-                android:id="@+id/card_full_hd"
-                android:layout_width="40dp"
-                android:layout_height="40dp"
-                android:visibility="gone"
-                app:cardBackgroundColor="#FFFFFF"
-                app:cardCornerRadius="14dp"
-                app:cardElevation="0dp"
-                tools:visibility="visible">
-
-                <androidx.appcompat.widget.AppCompatImageView
-                    android:id="@+id/img_premium"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:scaleType="centerInside"
-                    android:src="@drawable/ic_premium" />
-
-            </com.google.android.material.card.MaterialCardView>
-
             <TextView
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
@@ -49,7 +30,7 @@
                 android:layout_weight="1"
                 android:gravity="center|right"
                 android:text="@string/string_my_download_bottom_sheet_title"
-                android:textColor="@color/white"
+                android:textColor="@color/black"
                 android:textSize="16dp"
                 android:textStyle="bold"
                 tools:text="عنوان صفحه" />
@@ -58,7 +39,7 @@
                 android:id="@+id/card_view_back_toolbar_bottom_sheet"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                app:cardBackgroundColor="#80FFFFFF"
+                app:cardBackgroundColor="@color/purple_200"
                 app:cardCornerRadius="10dp"
                 app:cardElevation="0dp"
                 app:contentPadding="6dp">
