--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -25,5 +25,6 @@
     <color name="color_action_bar_preview_menu">#F1F1F1</color>
     <color name="color_download_button">#405aa5</color>
     <color name="color_download_popup">#E4F5FF</color>
+    <color name="color_background_card_icon_delete_share">#80FFFFFF</color>
 
 </resources>
