--- a/app/src/main/res/layout/layout_bottom_sheet_photo_detail.xml
+++ b/app/src/main/res/layout/layout_bottom_sheet_photo_detail.xml
@@ -27,7 +27,7 @@
                 android:id="@+id/card_view_share"
                 android:layout_width="40dp"
                 android:layout_height="40dp"
-                app:cardBackgroundColor="#80FFFFFF"
+                app:cardBackgroundColor="@color/purple_200"
                 app:cardCornerRadius="14dp"
                 app:cardElevation="0dp">
 
@@ -45,7 +45,7 @@
                 android:layout_marginRight="16dp"
                 android:layout_weight="1"
                 android:gravity="center|right"
-                android:textColor="@color/white"
+                android:textColor="@color/black"
                 android:textSize="16dp"
                 android:text="@string/string_photo_detail_bottom_sheet_title"
                 android:textStyle="bold"
@@ -56,7 +56,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 app:cardElevation="0dp"
-                app:cardBackgroundColor="#80FFFFFF"
+                app:cardBackgroundColor="@color/purple_200"
                 app:cardCornerRadius="10dp"
                 app:contentPadding="6dp">
 
